* Version 3.1.1 (unreleased)
 ** OpenPGP: set-touch now performs compatibility checks before prompting for PIN
 ** OpenPGP: Improved error messages in set-touch
 ** Bug fix: Fixed crash in OtpController.prepare_upload_key() error parsing

* Version 3.1.0 (released 2019-08-20)
 ** Add support for YubiKey 5Ci
 ** OpenPGP: the info command now prints OpenPGP specification version as well
 ** OpenPGP: Update support for attestation to match OpenPGP v3.4
 ** PIV: Use UTC time for self-signed certificates
 ** OTP: Static password now supports the Norman keyboard layout

* Version 3.0.0 (released 2019-06-24)
 ** Add support for new YubiKey Preview and lightning form factor
 ** FIDO: Support for credential management
 ** OpenPGP: Support for OpenPGP attestation, cardholder certificates and cached touch policies
 ** OTP: Add flag for using numeric keypad when sending digits

* Version 2.1.1 (released 2019-05-28)
 ** OTP: Add initial support for uploading Yubico OTP credentials to YubiCloud
 ** Don't automatically select the U2F applet on YubiKey NEO, it might be blocked by the OS
 ** ChalResp: Always pad challenge correctly
 ** Bugfix: Don't crash with older versions of cryptography
 ** Bugfix: Password was always prompted in OATH command, even if sent as argument

* Version 2.1.0 (released 2019-03-11)
 ** Add --reader flag to ykman list, to list available smart card readers
 ** FIPS: Checking if a YubiKey FIPS is in FIPS mode is now opt-in, with the --check-fips flag
 ** PIV: Add commands for writing and reading arbitrary PIV objects
 ** PIV: Verify that the PIN must be between 6 - 8 characters long
 ** PIV: In import-certificate, make the verification that the certificate and private key matches opt-in, with the --verify flag
 ** PIV: The piv info command now shows the serial number of the certificates
 ** PIV: The piv info command now shows the full Distinguished Name (DN) of the certificate subject and issuer, if possible