@@ -155,54 +155,58 @@ def info(ctx):
     for (slot, cert) in controller.list_certificates().items():
         click.echo('Slot %02x:' % slot)
 
-        try:
-            # Try to read out full DN, fallback to only CN.
-            # Support for DN was added in crytography 2.5
-            subject_dn = cert.subject.rfc4514_string()
-            issuer_dn = cert.issuer.rfc4514_string()
-            print_dn = True
-        except AttributeError:
-            print_dn = False
-            logger.debug('Failed to read DN, falling back to only CNs')
-            subject_cn = cert.subject.get_attributes_for_oid(
-                x509.NameOID.COMMON_NAME)
-            subject_cn = subject_cn[0].value if subject_cn else 'None'
-            issuer_cn = cert.issuer.get_attributes_for_oid(
-                x509.NameOID.COMMON_NAME)
-            issuer_cn = issuer_cn[0].value if issuer_cn else 'None'
-        except ValueError as e:
-            # Malformed certificates may throw ValueError
-            logger.debug('Failed parsing certificate', exc_info=e)
-            click.echo('\tMalformed certificate: {}'.format(e))
-            continue
+        if isinstance(cert, x509.Certificate):
+            try:
+                # Try to read out full DN, fallback to only CN.
+                # Support for DN was added in crytography 2.5
+                subject_dn = cert.subject.rfc4514_string()
+                issuer_dn = cert.issuer.rfc4514_string()
+                print_dn = True
+            except AttributeError:
+                print_dn = False
+                logger.debug('Failed to read DN, falling back to only CNs')
+                subject_cn = cert.subject.get_attributes_for_oid(
+                    x509.NameOID.COMMON_NAME)
+                subject_cn = subject_cn[0].value if subject_cn else 'None'
+                issuer_cn = cert.issuer.get_attributes_for_oid(
+                    x509.NameOID.COMMON_NAME)
+                issuer_cn = issuer_cn[0].value if issuer_cn else 'None'
+            except ValueError as e:
+                # Malformed certificates may throw ValueError
+                logger.debug('Failed parsing certificate', exc_info=e)
+                click.echo('\tMalformed certificate: {}'.format(e))
+                continue
 
-        fingerprint = b2a_hex(cert.fingerprint(hashes.SHA256())).decode('ascii')
-        algo = ALGO.from_public_key(cert.public_key())
-        serial = cert.serial_number
-        try:
-            not_before = cert.not_valid_before
-        except ValueError as e:
-            logger.debug('Failed reading not_valid_before', exc_info=e)
-            not_before = None
-        try:
-            not_after = cert.not_valid_after
-        except ValueError as e:
-            logger.debug('Failed reading not_valid_after', exc_info=e)
-            not_after = None
-        # Print out everything
-        click.echo('\tAlgorithm:\t%s' % algo.name)
-        if print_dn:
-            click.echo('\tSubject DN:\t%s' % subject_dn)
-            click.echo('\tIssuer DN:\t%s' % issuer_dn)
+            fingerprint = b2a_hex(
+                cert.fingerprint(hashes.SHA256())).decode('ascii')
+            algo = ALGO.from_public_key(cert.public_key())
+            serial = cert.serial_number
+            try:
+                not_before = cert.not_valid_before
+            except ValueError as e:
+                logger.debug('Failed reading not_valid_before', exc_info=e)
+                not_before = None
+            try:
+                not_after = cert.not_valid_after
+            except ValueError as e:
+                logger.debug('Failed reading not_valid_after', exc_info=e)
+                not_after = None
+            # Print out everything
+            click.echo('\tAlgorithm:\t%s' % algo.name)
+            if print_dn:
+                click.echo('\tSubject DN:\t%s' % subject_dn)
+                click.echo('\tIssuer DN:\t%s' % issuer_dn)
+            else:
+                click.echo('\tSubject CN:\t%s' % subject_cn)
+                click.echo('\tIssuer CN:\t%s' % issuer_cn)
+            click.echo('\tSerial:\t\t%s' % serial)
+            click.echo('\tFingerprint:\t%s' % fingerprint)
+            if not_before:
+                click.echo('\tNot before:\t%s' % not_before)
+            if not_after:
+                click.echo('\tNot after:\t%s' % not_after)
         else:
-            click.echo('\tSubject CN:\t%s' % subject_cn)
-            click.echo('\tIssuer CN:\t%s' % issuer_cn)
-        click.echo('\tSerial:\t\t%s' % serial)
-        click.echo('\tFingerprint:\t%s' % fingerprint)
-        if not_before:
-            click.echo('\tNot before:\t%s' % not_before)
-        if not_after:
-            click.echo('\tNot after:\t%s' % not_after)
+            click.echo('\tError: Failed to parse certificate.')
 
 
 @piv.command()
